# tpp

./: .gitignore  CMakeLists.txt  CompilerOutput.cc  LICENSE  LibTpp.cc  README.md  Rendering.cc  TemplateParser.cc  TypedefParser.cc  version.json
Executables/backends/codegen/: CMakeLists.txt  CodegenHelpers.h  CodegenTypes.h  EmbedTemplatesMain.cc  codegen.tpp  codegen.tpp.types  tpp-config.json
Executables/backends/tpp2cpp/: CMakeLists.txt  Main.cc  RenderTemplateStringsMain.cc  cpp-context.tpp.types  defs.tpp  defs.tpp.types  functions-header.tpp  functions-impl.tpp  tpp-config.json  types.tpp
Executables/backends/tpp2java/: CMakeLists.txt  Main.cc  defs.tpp  defs.tpp.types  runtime.tpp  source.tpp  tpp-config.json
Executables/backends/tpp2swift/: CMakeLists.txt  Main.cc  defs.tpp  defs.tpp.types  runtime.tpp  source.tpp  tpp-config.json
Executables/lsp/: Autocomplete.cc  Autocomplete.h  CMakeLists.txt  FoldingRanges.cc  FoldingRanges.h  JumpToDefinition.cc  JumpToDefinition.h  LspDefinitions.h  LspServer.cc  LspServer.h  Main.cc  Preview.cc  Preview.h  SemanticTokens.cc  SemanticTokens.h  TppProject.cc  TppProject.h
Libraries/lib_tpp/: CMakeLists.txt  ir.tpp  ir.tpp.types  tpp-config.json
Libraries/lib_tpp/src/: Analyzer.cc  Compiler.cc  CompilerOutput.cc  DataLoader.cc  IR.cc  IRAssembler.cc  IRBuilder.cc  IRInterpreter.cc  Layout.cc  Lowering.cc  PolicyParser.cc  ProjectConfigResolver.cc  PublicIRConverter.cc  Rendering.cc  TemplateParser.cc  TemplateSemantics.cc  Tokenizer.cc  Tooling.cc  ToolingCompile.cc  TypedefParser.cc  VM.cc
Libraries/lib_tpp/tpp/: AST.h  CompilerPipeline.h  IRAssembler.h  IRBuilder.h  IRInterpreter.h  Instruction.h  Lowering.h  Parser.h  ProjectConfigResolver.h  PublicIRConverter.h  SemanticModel.h  TemplateParser.h  Tokenizer.h  ToolingCompile.h  ToolingFolding.h  ToolingInternal.h  TypedefParser.h  Types.h
Test/: Acceptance.cc  AcceptanceTest.cc  CMakeLists.txt  LspTestSpec.h.in  TestCases.h.in  TestUtils.cc  TestUtils.h
Test/Fixtures/tpp2cpp_doc_comments/: template.tpp  tpp-config.json  typedefs.tpp
Test/MakeJavaTest/: CMakeLists.txt  Main.cc  defs.tpp  tpp-config.json  types.tpp
Test/MakeStatTest/: CMakeLists.txt  Main.cc  defs.tpp  tpp-config.json  types.tpp
Test/MakeSwiftTest/: CMakeLists.txt  Main.cc  defs.tpp  types.tpp
Test/TestCases/apostrophe_in_input_string/: expected_output.txt  template.tpp  tpp-config.json  typedefs.tpp
Test/TestCases/basic_struct/: expected_ir.json  input.json  lsp-test.json  template.tpp  test-case.json  tpp-config.json  typedefs.tpp
Test/TestCases/basic_variant/: expected_ir.json  expected_output.txt  input.json  lsp-test.json  template.tpp  test-case.json  tpp-config.json  typedefs.tpp
Test/TestCases/conditional/: expected_ir.json  expected_output.txt  input.json  template.tpp  tpp-config.json  typedefs.tpp.types
Test/TestCases/direct_function_call/: expected_ir.json  input.json  template.tpp
Test/TestCases/direct_function_call_zero_args/: expected_ir.json  expected_output.txt  lsp-test.json  template.tpp  test-case.json  tpp-config.json
Test/TestCases/error_align_multiline_dynamic_data/: template.tpp  test-case.json  tpp-config.json  typedefs.tpp
Test/TestCases/error_align_multiline_literal/: expected_errors.json  template.tpp  tpp-config.json  typedefs.tpp
Test/TestCases/error_align_spec_too_short/: expected_diagnostics.json  template.tpp  test-case.json  tpp-config.json  typedefs.tpp
Test/TestCases/error_align_without_option/: expected_diagnostics.json  template.tpp  test-case.json
Test/TestCases/error_case_trailing_tokens/: expected_diagnostics.json  template.tpp  test-case.json  typedefs.tpp
Test/TestCases/error_content_after_inline_end_case/: template.tpp  test-case.json  tpp-config.json  typedefs.tpp
Test/TestCases/error_duplicate_function/: expected_diagnostics.json  template.tpp  test-case.json
Test/TestCases/error_duplicate_type/: expected_diagnostics.json  first.tpp  second.tpp.types  template.tpp  test-case.json  tpp-config.json
Test/TestCases/error_empty_directive/: expected_diagnostics.json  template.tpp  test-case.json
Test/TestCases/error_for_option_without_pipe/: expected_diagnostics.json  template.tpp  test-case.json  tpp-config.json
Test/TestCases/error_for_unknown_option/: expected_diagnostics.json  input.json  template.tpp  test-case.json
Test/TestCases/error_if_not_non_bool/: expected_diagnostics.json  input.json  template.tpp  test-case.json  tpp-config.json  typedefs.tpp.types
Test/TestCases/error_infinite_enum/: expected_diagnostics.json  template.tpp  test-case.json  typedefs.tpp.types
Test/TestCases/error_infinite_struct/: expected_diagnostics.json  test-case.json  tpp-config.json  typedefs.tpp.types
Test/TestCases/error_interpolate_enum/: expected_output.txt  template.tpp  tpp-config.json  typedefs.tpp
Test/TestCases/error_interpolate_list/: template.tpp  tpp-config.json
Test/TestCases/error_interpolate_struct/: template.tpp  tpp-config.json  typedefs.tpp
Test/TestCases/error_main_lookup_ambiguous/: expected_errors.json  test-case.json  tpp-config.json
Test/TestCases/error_main_not_found/: expected_errors.json  template.tpp  test-case.json
Test/TestCases/error_missing_colon_in_typedef/: expected_diagnostics.json  template.tpp  test-case.json  tpp-config.json
Test/TestCases/error_missing_end_case/: expected_diagnostics.json  template.tpp  test-case.json  typedefs.tpp
Test/TestCases/error_missing_end_for/: expected_diagnostics.json  template.tpp  test-case.json
Test/TestCases/error_missing_end_switch/: expected_diagnostics.json  template.tpp  test-case.json
Test/TestCases/error_missing_field_in_input/: expected_errors.json  test-case.json
Test/TestCases/escape_at/: expected_ir.json  (+3 more)
Test/include/: LspClient.h  TestCaseIO.h  TestUtils.h
Test/src/: AcceptanceTest.cc  FunctionLookupTest.cc  IRStabilityTest.cc  LayoutTest.cc  LspClient.cc  LspTest.cc  RenderCLITest.cc  TestUtils.cc  Tpp2CppCliTest.cc  Tpp2JavaCliTest.cc  Tpp2SwiftCliTest.cc  TppCliTest.cc  VMTest.cc  WorkspaceProjectTest.cc  WriterTest.cc
(+503 files in other folders)
