# ── Configure-time test case discovery ───────────────────────────────────────
# Scan TestCases/ at configure time; separate success (expected_output.txt)
# from failure (expected_diagnostics.json / expected_errors.json) cases.
# Results are baked into TestCases.h via configure_file so that the test
# binary does NOT need to scan the filesystem at startup.

set(tpp_success_cases "")
set(tpp_failure_cases "")
set(tpp_diagnostic_cases "")

file(GLOB test_case_dirs LIST_DIRECTORIES true
     ${CMAKE_CURRENT_SOURCE_DIR}/TestCases/*)

foreach(test_dir IN LISTS test_case_dirs)
    if(NOT IS_DIRECTORY ${test_dir})
        continue()
    endif()
    if(NOT EXISTS ${test_dir}/tpp-config.json)
        continue()
    endif()
    get_filename_component(test_name ${test_dir} NAME)
    if(EXISTS ${test_dir}/expected_output.txt)
        list(APPEND tpp_success_cases ${test_name})
    else()
        list(APPEND tpp_failure_cases ${test_name})
        if(EXISTS ${test_dir}/expected_diagnostics.json)
            list(APPEND tpp_diagnostic_cases ${test_name})
        endif()
    endif()
endforeach()

set(TPP_SUCCESS_CASE_ENTRIES "")
set(TPP_FAILURE_CASE_ENTRIES "")
set(TPP_DIAGNOSTIC_CASE_ENTRIES "")
foreach(name IN LISTS tpp_success_cases)
    string(APPEND TPP_SUCCESS_CASE_ENTRIES "    \"${name}\",\n")
endforeach()
foreach(name IN LISTS tpp_failure_cases)
    string(APPEND TPP_FAILURE_CASE_ENTRIES "    \"${name}\",\n")
endforeach()
foreach(name IN LISTS tpp_diagnostic_cases)
    string(APPEND TPP_DIAGNOSTIC_CASE_ENTRIES "    \"${name}\",\n")
endforeach()

configure_file(TestCases.h.in ${CMAKE_CURRENT_BINARY_DIR}/TestCases.h @ONLY)

# ── LSP test spec: per-case lsp-test.json → LspTestSpec.h ────────────────────
# Just discover which test cases have each LSP section; data is loaded and
# parsed at runtime in LspTest.cc.

set(LSP_TOKEN_CASE_NAMES "")
set(LSP_FOLDING_CASE_NAMES "")
set(LSP_DEFINITION_CASE_NAMES "")

file(GLOB _lsp_case_dirs LIST_DIRECTORIES true
     ${CMAKE_CURRENT_SOURCE_DIR}/TestCases/*)

foreach(_dir IN LISTS _lsp_case_dirs)
    if(NOT IS_DIRECTORY ${_dir})
        continue()
    endif()
    set(_spec "${_dir}/lsp-test.json")
    if(NOT EXISTS "${_spec}")
        continue()
    endif()
    get_filename_component(_tc "${_dir}" NAME)
    file(READ "${_spec}" _lsp_json)

    string(JSON _ignored ERROR_VARIABLE _err TYPE "${_lsp_json}" "semantic_tokens")
    if(NOT _err)
        string(APPEND LSP_TOKEN_CASE_NAMES "    \"${_tc}\",\n")
    endif()

    string(JSON _ignored ERROR_VARIABLE _err TYPE "${_lsp_json}" "folding_ranges")
    if(NOT _err)
        string(APPEND LSP_FOLDING_CASE_NAMES "    \"${_tc}\",\n")
    endif()

    string(JSON _nd ERROR_VARIABLE _err LENGTH "${_lsp_json}" "go_to_definition")
    if(NOT _err AND _nd GREATER 0)
        string(APPEND LSP_DEFINITION_CASE_NAMES "    \"${_tc}\",\n")
    endif()
endforeach()

configure_file(LspTestSpec.h.in ${CMAKE_CURRENT_BINARY_DIR}/LspTestSpec.h @ONLY)

# ── Main acceptance test binary ───────────────────────────────────────────────

add_executable(tpp_acceptance_test
    src/TestUtils.cc
    src/AcceptanceTest.cc
    src/RenderCLITest.cc
    src/IRStabilityTest.cc
    src/LspClient.cc
    src/LspTest.cc
)

target_link_libraries(tpp_acceptance_test PRIVATE ${TPP_GTEST_MAIN_TARGET} lib_tpp tpp_lsp_defs)
target_include_directories(tpp_acceptance_test PRIVATE
    ${CMAKE_CURRENT_BINARY_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_dependencies(tpp_acceptance_test tpp render-tpp tpp-lsp)

target_compile_definitions(tpp_acceptance_test PUBLIC
    TPP_EXE="$<TARGET_FILE:tpp>"
    RENDER_TPP_EXE="$<TARGET_FILE:render-tpp>"
    TPP_LSP_EXE="$<TARGET_FILE:tpp-lsp>")

add_subdirectory(MakeStatTest)
add_subdirectory(MakeJavaTest)
add_subdirectory(MakeSwiftTest)

# ── Static C++ tests (generated by make-stat-test) ───────────────────────────
# For each success test case generate:
#   <name>-tpp.json, <name>_types.h, <name>_functions.h,
#   <name>_implementation.cc, <name>_test.cc

set(cpp_test_sources "")

foreach(test_name IN LISTS tpp_success_cases)
    set(test_dir ${CMAKE_CURRENT_SOURCE_DIR}/TestCases/${test_name})
    file(GLOB test_case_files ${test_dir}/*)

    tpp_add(tpp_acceptance_test
        NAME      ${test_name}
        SOURCE_DIR ${test_dir}
        NAMESPACE  ${test_name}
    )

    set(out_test ${CMAKE_CURRENT_BINARY_DIR}/${test_name}_test.cc)

    add_custom_command(OUTPUT ${out_test}
        COMMAND ${CMAKE_COMMAND}
            -DCMD=$<TARGET_FILE:make-stat-test>
            "-DARGS=${test_dir}"
            -DOUT=${out_test}
            -P ${CMAKE_SOURCE_DIR}/cmake/StdoutToFile.cmake
        DEPENDS $<TARGET_FILE:make-stat-test> ${test_case_files}
        COMMENT "make-stat-test ${test_name}"
        VERBATIM)

    list(APPEND cpp_test_sources ${out_test})
endforeach()

if(cpp_test_sources)
    target_sources(tpp_acceptance_test PRIVATE ${cpp_test_sources})
endif()

include(GoogleTest)

gtest_discover_tests(tpp_acceptance_test
                        PREFIX "cpp/"
                        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
                        PROPERTIES TIMEOUT 15)

# ── Java tests (generated by tpp2java) ───────────────────────────────────────

include(${CMAKE_SOURCE_DIR}/cmake/TppJavaHelpers.cmake)

add_custom_target(java_tests)

foreach(test_name IN LISTS tpp_success_cases)
    set(test_dir ${CMAKE_CURRENT_SOURCE_DIR}/TestCases/${test_name})
    tpp_java_add(java_tests
        TEST_DIR  ${test_dir}
        NAME      ${test_name}
    )
    if(JAVA_RUNTIME)
        add_test(
            NAME "java/${test_name}"
            COMMAND "${JAVA_RUNTIME}" -cp "${TPP_JAVA_CLASS_DIR}:${ORG_JSON_JAR}" Test
        )
        set_tests_properties("java/${test_name}" PROPERTIES TIMEOUT 5)
    endif()
endforeach()

# ── Swift tests (generated by tpp2swift) ─────────────────────────────────────

include(${CMAKE_SOURCE_DIR}/cmake/TppSwiftHelpers.cmake)

add_custom_target(swift_tests)

foreach(test_name IN LISTS tpp_success_cases)
    set(test_dir ${CMAKE_CURRENT_SOURCE_DIR}/TestCases/${test_name})
    tpp_swift_add(swift_tests
        TEST_DIR  ${test_dir}
        NAME      ${test_name}
    )
    if(SWIFT_COMPILER)
        add_test(
            NAME "swift/${test_name}"
            COMMAND "${TPP_SWIFT_BIN}"
        )
        set_tests_properties("swift/${test_name}" PROPERTIES TIMEOUT 5)
    endif()
endforeach()

# ── build_all_tests umbrella target ──────────────────────────────────────────

add_custom_target(build_all_tests)
add_dependencies(build_all_tests tpp_acceptance_test)
add_dependencies(build_all_tests java_tests)
add_dependencies(build_all_tests swift_tests)

# ── update_ir_snapshots — regenerate IR snapshots and bump version ───────────

add_custom_target(update_ir_snapshots
    COMMAND ${CMAKE_SOURCE_DIR}/scripts/update-ir-snapshots.sh ${CMAKE_BINARY_DIR}
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    USES_TERMINAL
    COMMENT "Updating IR snapshots and version"
)
