# ── Configure-time test case discovery ───────────────────────────────────────
# Scan TestCases/ at configure time; separate success (expected_output.txt)
# from failure (expected_diagnostics.json / expected_errors.json) cases.
# Results are baked into TestCases.h via configure_file so that the test
# binary does NOT need to scan the filesystem at startup.

set(tpp_success_cases "")
set(tpp_failure_cases "")
set(tpp_diagnostic_cases "")

file(GLOB test_case_dirs LIST_DIRECTORIES true
     ${CMAKE_CURRENT_SOURCE_DIR}/TestCases/*)

foreach(test_dir IN LISTS test_case_dirs)
    if(NOT IS_DIRECTORY ${test_dir})
        continue()
    endif()
    if(NOT EXISTS ${test_dir}/tpp-config.json)
        continue()
    endif()
    get_filename_component(test_name ${test_dir} NAME)
    if(EXISTS ${test_dir}/expected_output.txt)
        list(APPEND tpp_success_cases ${test_name})
    else()
        list(APPEND tpp_failure_cases ${test_name})
        if(EXISTS ${test_dir}/expected_diagnostics.json)
            list(APPEND tpp_diagnostic_cases ${test_name})
        endif()
    endif()
endforeach()

set(TPP_SUCCESS_CASE_ENTRIES "")
set(TPP_FAILURE_CASE_ENTRIES "")
set(TPP_DIAGNOSTIC_CASE_ENTRIES "")
foreach(name IN LISTS tpp_success_cases)
    string(APPEND TPP_SUCCESS_CASE_ENTRIES "    \"${name}\",\n")
endforeach()
foreach(name IN LISTS tpp_failure_cases)
    string(APPEND TPP_FAILURE_CASE_ENTRIES "    \"${name}\",\n")
endforeach()
foreach(name IN LISTS tpp_diagnostic_cases)
    string(APPEND TPP_DIAGNOSTIC_CASE_ENTRIES "    \"${name}\",\n")
endforeach()

configure_file(TestCases.h.in ${CMAKE_CURRENT_BINARY_DIR}/TestCases.h @ONLY)

# ── LSP test spec: per-case lsp-test.json → LspTestSpec.h ────────────────────
# `lsp-test.json` is a test artifact checked into individual TestCases/
# directories. Configure-time discovery only records which cases provide each
# LSP section; the full JSON is still loaded at runtime in LspTest.cc.
# Supported sections are `semantic_tokens`, `folding_ranges`, and
# `go_to_definition`. Keep the schemas in sync with
# `.github/skills/add-acceptance-test/references/expected-formats.md`.

set(LSP_TOKEN_CASE_NAMES "")
set(LSP_FOLDING_CASE_NAMES "")
set(LSP_DEFINITION_CASE_NAMES "")

file(GLOB _lsp_case_dirs LIST_DIRECTORIES true
     ${CMAKE_CURRENT_SOURCE_DIR}/TestCases/*)

foreach(_dir IN LISTS _lsp_case_dirs)
    if(NOT IS_DIRECTORY ${_dir})
        continue()
    endif()
    set(_spec "${_dir}/lsp-test.json")
    if(NOT EXISTS "${_spec}")
        continue()
    endif()
    get_filename_component(_tc "${_dir}" NAME)
    file(READ "${_spec}" _lsp_json)

    string(JSON _ignored ERROR_VARIABLE _err TYPE "${_lsp_json}" "semantic_tokens")
    if(NOT _err)
        string(APPEND LSP_TOKEN_CASE_NAMES "    \"${_tc}\",\n")
    endif()

    string(JSON _ignored ERROR_VARIABLE _err TYPE "${_lsp_json}" "folding_ranges")
    if(NOT _err)
        string(APPEND LSP_FOLDING_CASE_NAMES "    \"${_tc}\",\n")
    endif()

    string(JSON _nd ERROR_VARIABLE _err LENGTH "${_lsp_json}" "go_to_definition")
    if(NOT _err AND _nd GREATER 0)
        string(APPEND LSP_DEFINITION_CASE_NAMES "    \"${_tc}\",\n")
    endif()
endforeach()

configure_file(LspTestSpec.h.in ${CMAKE_CURRENT_BINARY_DIR}/LspTestSpec.h @ONLY)

# ── Main acceptance test binary ───────────────────────────────────────────────

add_executable(tpp_acceptance_test
    src/TestUtils.cc
    src/AcceptanceTest.cc
    src/RenderCLITest.cc
    src/IRStabilityTest.cc
    src/LspClient.cc
    src/LspTest.cc
)

target_link_libraries(tpp_acceptance_test PRIVATE ${TPP_GTEST_MAIN_TARGET} tpp_lsp_defs)
target_include_directories(tpp_acceptance_test PRIVATE
    ${CMAKE_CURRENT_BINARY_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_dependencies(tpp_acceptance_test tpp render-tpp tpp-lsp)

target_compile_definitions(tpp_acceptance_test PUBLIC
    TPP_EXE="$<TARGET_FILE:tpp>"
    RENDER_TPP_EXE="$<TARGET_FILE:render-tpp>"
    TPP_LSP_EXE="$<TARGET_FILE:tpp-lsp>")

add_subdirectory(MakeStatTest)
add_subdirectory(MakeJavaTest)
add_subdirectory(MakeSwiftTest)

# ── Static C++ tests (generated by make-stat-test) ───────────────────────────
# For each success test case generate:
#   <name>-tpp.json, <name>_types.h, <name>_functions.h,
#   <name>_implementation.cc, <name>_test.cc

set(cpp_test_sources "")
set(cpp_generated_impl_sources "")
set(cpp_generated_test_sources "")

foreach(test_name IN LISTS tpp_success_cases)
    set(test_dir ${CMAKE_CURRENT_SOURCE_DIR}/TestCases/${test_name})
    file(GLOB test_case_files ${test_dir}/*)
    set(out_impl ${CMAKE_CURRENT_BINARY_DIR}/${test_name}_implementation.cc)

    tpp_add(tpp_acceptance_test
        NAME       ${test_name}
        SOURCE_DIR ${test_dir}
        NAMESPACE  ${test_name}
    )

    set(out_test ${CMAKE_CURRENT_BINARY_DIR}/${test_name}_test.cc)

    add_custom_command(OUTPUT ${out_test}
        COMMAND ${CMAKE_COMMAND}
            -DCMD=$<TARGET_FILE:make-stat-test>
            "-DARGS=${test_dir}"
            -DOUT=${out_test}
            -P ${CMAKE_SOURCE_DIR}/cmake/StdoutToFile.cmake
        DEPENDS $<TARGET_FILE:make-stat-test> ${test_case_files}
        COMMENT "make-stat-test ${test_name}"
        VERBATIM)

    list(APPEND cpp_test_sources ${out_test})
    list(APPEND cpp_generated_impl_sources ${out_impl})
    list(APPEND cpp_generated_test_sources ${out_test})
endforeach()

if(cpp_test_sources)
    target_sources(tpp_acceptance_test PRIVATE ${cpp_test_sources})
endif()

if(TPP_ENABLE_TEST_CPP_UNITY AND cpp_generated_impl_sources)
    # Use explicit unity groups so only generated implementation sources are
    # batched together. Handwritten harness files stay in standalone TUs.
    set_target_properties(tpp_acceptance_test PROPERTIES
        UNITY_BUILD ON
        UNITY_BUILD_MODE GROUP
        UNITY_BUILD_UNIQUE_ID TPP_CPP_TEST_UNITY_ID)

    set(_tpp_unity_buckets ${TPP_TEST_CPP_UNITY_BUCKETS})
    if(_tpp_unity_buckets LESS 1)
        set(_tpp_unity_buckets 1)
    endif()

    set(_tpp_unity_index 0)
    foreach(_src IN LISTS cpp_generated_impl_sources)
        math(EXPR _tpp_unity_bucket "${_tpp_unity_index} % ${_tpp_unity_buckets}")
        set_source_files_properties(${_src} PROPERTIES
            UNITY_GROUP "tpp_generated_impl_${_tpp_unity_bucket}")
        math(EXPR _tpp_unity_index "${_tpp_unity_index} + 1")
    endforeach()

    set(_tpp_unity_index 0)
    foreach(_src IN LISTS cpp_generated_test_sources)
        math(EXPR _tpp_unity_bucket "${_tpp_unity_index} % ${_tpp_unity_buckets}")
        set_source_files_properties(${_src} PROPERTIES
            UNITY_GROUP "tpp_generated_test_${_tpp_unity_bucket}")
        math(EXPR _tpp_unity_index "${_tpp_unity_index} + 1")
    endforeach()
endif()

include(GoogleTest)

gtest_discover_tests(tpp_acceptance_test
                        PREFIX "cpp/"
                        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
                        PROPERTIES TIMEOUT 15)

# ── Java tests (aggregated single-runner build) ──────────────────────────────

set(ORG_JSON_JAR "${CMAKE_BINARY_DIR}/org.json.jar")
set(ORG_JSON_URL "https://repo1.maven.org/maven2/org/json/json/20240303/json-20240303.jar")

if(NOT EXISTS "${ORG_JSON_JAR}")
    message(STATUS "Downloading org.json JAR ...")
    file(DOWNLOAD "${ORG_JSON_URL}" "${ORG_JSON_JAR}"
         STATUS _dl_status
         TLS_VERIFY ON)
    list(GET _dl_status 0 _dl_code)
    if(NOT _dl_code EQUAL 0)
        message(WARNING "Failed to download org.json JAR (${_dl_status}). Java tests will not work.")
    endif()
endif()

find_program(JAVA_COMPILER javac)
find_program(JAVA_RUNTIME java)
find_program(SWIFT_COMPILER swiftc)

add_custom_target(java_tests)
add_custom_target(swift_tests)

set(java_runner_dir "${CMAKE_CURRENT_BINARY_DIR}/java_tests")
set(swift_runner_dir "${CMAKE_CURRENT_BINARY_DIR}/swift_tests")

set(java_shared_runtime "${java_runner_dir}/000_runtime.java")
set(java_runner_src "${java_runner_dir}/Test.java")
set(java_dispatch_src "${java_runner_dir}/999_dispatch.java")
set(java_concat_inputs "${java_shared_runtime}")
set(JAVA_DISPATCH_CASES "")

set(swift_shared_runtime "${swift_runner_dir}/000_runtime.swift")
set(swift_runner_src "${swift_runner_dir}/Test.swift")
set(swift_dispatch_src "${swift_runner_dir}/999_dispatch.swift")
set(swift_concat_inputs "${swift_shared_runtime}")
set(SWIFT_DISPATCH_CASES "")

add_custom_command(
    OUTPUT "${java_shared_runtime}"
    COMMAND ${CMAKE_COMMAND}
        -DCMD=$<TARGET_FILE:tpp2java>
        "-DARGS=runtime-shared"
        -DOUT=${java_shared_runtime}
        -P ${CMAKE_SOURCE_DIR}/cmake/StdoutToFile.cmake
    DEPENDS $<TARGET_FILE:tpp2java>
    COMMENT "tpp2java runtime-shared"
    VERBATIM)

add_custom_command(
    OUTPUT "${swift_shared_runtime}"
    COMMAND ${CMAKE_COMMAND}
        -DCMD=$<TARGET_FILE:tpp2swift>
        "-DARGS=runtime-shared"
        -DOUT=${swift_shared_runtime}
        -P ${CMAKE_SOURCE_DIR}/cmake/StdoutToFile.cmake
    DEPENDS $<TARGET_FILE:tpp2swift>
    COMMENT "tpp2swift runtime-shared"
    VERBATIM)

foreach(test_name IN LISTS tpp_success_cases)
    set(test_dir ${CMAKE_CURRENT_SOURCE_DIR}/TestCases/${test_name})
    file(GLOB test_case_files ${test_dir}/*)
    set(shared_ir "${CMAKE_CURRENT_BINARY_DIR}/${test_name}-tpp.json")

    set(java_namespace "Java_${test_name}")
    set(java_runner_class "JavaTest_${test_name}")
    set(java_bundle "${java_runner_dir}/${test_name}_bundle.java")
    set(java_fragment "${java_runner_dir}/${test_name}_fragment.java")

    add_custom_command(
        OUTPUT "${java_bundle}"
        COMMAND ${CMAKE_COMMAND}
            -DCMD=$<TARGET_FILE:tpp2java>
            "-DARGS=bundle;-ns;${java_namespace};--extern-runtime;--input;${shared_ir}"
            -DOUT=${java_bundle}
            -P ${CMAKE_SOURCE_DIR}/cmake/StdoutToFile.cmake
        DEPENDS $<TARGET_FILE:tpp2java> "${shared_ir}"
        COMMENT "tpp2java bundle ${test_name}"
        VERBATIM)

    add_custom_command(
        OUTPUT "${java_fragment}"
        COMMAND ${CMAKE_COMMAND}
            -DCMD=$<TARGET_FILE:make-java-test>
            "-DARGS=--fragment;${java_namespace};${java_runner_class};${test_dir}"
            -DOUT=${java_fragment}
            -P ${CMAKE_SOURCE_DIR}/cmake/StdoutToFile.cmake
        DEPENDS $<TARGET_FILE:make-java-test> ${test_case_files}
        COMMENT "make-java-test fragment ${test_name}"
        VERBATIM)

    list(APPEND java_concat_inputs "${java_bundle}" "${java_fragment}")
    string(APPEND JAVA_DISPATCH_CASES "                case \"${test_name}\": ${java_runner_class}.run(); return;\n")

    set(swift_namespace "Swift_${test_name}")
    set(swift_runner_name "SwiftTest_${test_name}")
    set(swift_bundle "${swift_runner_dir}/${test_name}_bundle.swift")
    set(swift_fragment "${swift_runner_dir}/${test_name}_fragment.swift")

    add_custom_command(
        OUTPUT "${swift_bundle}"
        COMMAND ${CMAKE_COMMAND}
            -DCMD=$<TARGET_FILE:tpp2swift>
            "-DARGS=source;-ns;${swift_namespace};--extern-runtime;--input;${shared_ir}"
            -DOUT=${swift_bundle}
            -P ${CMAKE_SOURCE_DIR}/cmake/StdoutToFile.cmake
        DEPENDS $<TARGET_FILE:tpp2swift> "${shared_ir}"
        COMMENT "tpp2swift source ${test_name}"
        VERBATIM)

    add_custom_command(
        OUTPUT "${swift_fragment}"
        COMMAND ${CMAKE_COMMAND}
            -DCMD=$<TARGET_FILE:make-swift-test>
            "-DARGS=--fragment;${swift_namespace};${swift_runner_name};${test_dir}"
            -DOUT=${swift_fragment}
            -P ${CMAKE_SOURCE_DIR}/cmake/StdoutToFile.cmake
        DEPENDS $<TARGET_FILE:make-swift-test> ${test_case_files}
        COMMENT "make-swift-test fragment ${test_name}"
        VERBATIM)

    list(APPEND swift_concat_inputs "${swift_bundle}" "${swift_fragment}")
    string(APPEND SWIFT_DISPATCH_CASES "        case \"${test_name}\": try ${swift_runner_name}.run(); return\n")
endforeach()

file(GENERATE OUTPUT "${java_dispatch_src}" CONTENT "public class Test {\n    public static void main(String[] argv) {\n        if (argv.length != 1) { System.err.println(\"Expected test case name\"); System.exit(2); }\n        try {\n            switch (argv[0]) {\n${JAVA_DISPATCH_CASES}                default: System.err.println(\"Unknown test case: \" + argv[0]); System.exit(2);\n            }\n        } catch (Exception e) {\n            e.printStackTrace();\n            System.exit(2);\n        }\n    }\n}\n")
file(GENERATE OUTPUT "${swift_dispatch_src}" CONTENT "@main\nenum Test {\n    static func main() throws {\n        guard CommandLine.arguments.count == 2 else {\n            fputs(\"Expected test case name\\n\", stderr)\n            exit(2)\n        }\n        switch CommandLine.arguments[1] {\n${SWIFT_DISPATCH_CASES}        default:\n            fputs(\"Unknown test case: \\(CommandLine.arguments[1])\\n\", stderr)\n            exit(2)\n        }\n    }\n}\n")

list(APPEND java_concat_inputs "${java_dispatch_src}")
list(APPEND swift_concat_inputs "${swift_dispatch_src}")

add_custom_command(
    OUTPUT "${java_runner_src}"
    COMMAND ${CMAKE_COMMAND}
        -DOUT=${java_runner_src}
        "-DINPUTS=${java_concat_inputs}"
        -P ${CMAKE_SOURCE_DIR}/cmake/ConcatFiles.cmake
    DEPENDS ${java_concat_inputs}
    COMMENT "Assembling Java test runner"
    VERBATIM)

add_custom_command(
    OUTPUT "${swift_runner_src}"
    COMMAND ${CMAKE_COMMAND}
        -DOUT=${swift_runner_src}
        "-DINPUTS=${swift_concat_inputs}"
        -P ${CMAKE_SOURCE_DIR}/cmake/ConcatFiles.cmake
    DEPENDS ${swift_concat_inputs}
    COMMENT "Assembling Swift test runner"
    VERBATIM)

if(JAVA_COMPILER)
    set(java_class "${java_runner_dir}/Test.class")
    add_custom_command(
        OUTPUT "${java_class}"
        COMMAND "${JAVA_COMPILER}" -cp "${ORG_JSON_JAR}" -d "${java_runner_dir}" "${java_runner_src}"
        DEPENDS "${java_runner_src}" "${ORG_JSON_JAR}"
        COMMENT "javac aggregated Java tests")
    add_custom_target(java_tests_build DEPENDS "${java_class}")
    add_dependencies(java_tests_build tpp tpp2java make-java-test)
    add_dependencies(java_tests java_tests_build)
endif()

if(SWIFT_COMPILER)
    set(swift_bin "${swift_runner_dir}/Test")
    add_custom_command(
        OUTPUT "${swift_bin}"
        COMMAND "${SWIFT_COMPILER}" -parse-as-library -o "${swift_bin}" "${swift_runner_src}"
        DEPENDS "${swift_runner_src}"
        COMMENT "swiftc aggregated Swift tests")
    add_custom_target(swift_tests_build DEPENDS "${swift_bin}")
    add_dependencies(swift_tests_build tpp tpp2swift make-swift-test)
    add_dependencies(swift_tests swift_tests_build)
endif()

foreach(test_name IN LISTS tpp_success_cases)
    if(JAVA_RUNTIME AND JAVA_COMPILER)
        add_test(
            NAME "java/${test_name}"
            COMMAND "${JAVA_RUNTIME}" -cp "${java_runner_dir}:${ORG_JSON_JAR}" Test "${test_name}"
        )
        set_tests_properties("java/${test_name}" PROPERTIES TIMEOUT 5)
    endif()
    if(SWIFT_COMPILER)
        add_test(
            NAME "swift/${test_name}"
            COMMAND "${swift_runner_dir}/Test" "${test_name}"
        )
        set_tests_properties("swift/${test_name}" PROPERTIES TIMEOUT 5)
    endif()
endforeach()

# ── build_all_tests umbrella target ──────────────────────────────────────────

add_custom_target(build_all_tests)
add_dependencies(build_all_tests tpp_acceptance_test)
add_dependencies(build_all_tests java_tests)
add_dependencies(build_all_tests swift_tests)

# ── update_ir_snapshots — regenerate IR snapshots and bump version ───────────

add_custom_target(update_ir_snapshots
    COMMAND ${CMAKE_SOURCE_DIR}/scripts/update-ir-snapshots.sh ${CMAKE_BINARY_DIR}
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    USES_TERMINAL
    COMMENT "Updating IR snapshots and version"
)
